--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Import Material Components for Android
+    // implementation 'com.google.android.material:material:<version>'
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
 }
